[package]
name = "fixed-resample"
version = "0.3.1"
edition = "2021"
license = "MIT"
authors = ["Billy Messenger <60663878+BillyDM@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/MeadowlarkDAW/fixed-resample"
description = "An easy to use crate for resampling at a fixed ratio"
categories = ["multimedia", "multimedia::audio"]
keywords = ["audio", "resample", "resampler", "realtime", "samplerate"]
exclude = ["test_files/"]

[features]
default = ["resampler", "fft-resampler", "channel"]
# Enables resampling. Disable this if you only want to use the channel types
# without any resampling.
resampler = ["dep:rubato"]
# Enables the resampling channel types. This uses the `ringbuf` crate
# internally.
channel = ["dep:ringbuf"]
# Enables the fft-based resampling algorithm used for the `Normal` resampling
# quality. This is recommended for most use cases. Disable if you only
# need the `Low` resampling quality.
fft-resampler = ["resampler", "rubato?/fft_resampler"]

[dependencies]
rubato = { version = "0.16.1", default-features = false, optional = true }
ringbuf = { version = "0.4.7", optional = true }

[dev-dependencies]
clap = { version = "4.5.27", features = ["derive"] }
hound = "3.5.1"
ringbuf = "0.4.7"
spin_sleep = "1.3.0"